--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,21 +1,13 @@
-FROM node:22-alpine AS builder
+FROM node:22 AS builder
 WORKDIR /app
-
-# Installer les dépendances
 COPY package*.json ./
 RUN npm ci
-
-# Copier le code
 COPY . .
-
-# Builder le projet Next.js
 RUN npm run build
 
-# Image finale légère
-FROM node:22-alpine
+FROM node:22
 WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app ./
 EXPOSE 4000
-
 CMD ["npm", "start"]
