--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,13 +1,28 @@
 FROM node:22 AS builder
 WORKDIR /app
+
+# Install dependencies
 COPY package*.json ./
 RUN npm ci
+
+# Copy code
 COPY . .
+
+# Build Next.js
 RUN npm run build
 
-FROM node:22
+# --- Runner ---
+FROM node:22-slim AS runner
 WORKDIR /app
 ENV NODE_ENV=production
-COPY --from=builder /app ./
+
+# Copy only production node_modules
+COPY package*.json ./
+RUN npm ci --omit=dev
+
+# Copy Next build
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+
 EXPOSE 4000
-CMD ["npm", "run", "start"]
+CMD ["npm", "start"]
